# cpfnet

./: CMakeLists.txt  README.md  build.sh  sele.py  test.txt
doc/: cpf.md
src/: CMakeLists.txt  HttpCul.cpp  sele.py  test.py
src/http_curl/: CMakeLists.txt
test/: othre.cpp
